# ExampleQtQMLModule

./: .gitignore  CMakeLists.txt  ExampleQtQMLModule.qmlproject  Screen01.ui.qml  main.qml  qmlmodules
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/ExampleQtQMLModule/: CMakeLists.txt  qmldir
imports/ExampleQtQMLModule/designer/: plugin.metainfo
src/: CMakeLists.txt  import_qml_plugins.h  main.cpp
src/ExampleLibrary/: CMakeLists.txt  backendObject.cpp  backendObject.h  backendService.cpp  backendService.h  qmldir
view/: CMakeLists.txt
view/ExampleQMLLibrary/: CMakeLists.txt  SpecialButton.qml  qmldir
